Fix issues with app names being cut off

--- a/nextcloudappstore/core/static/assets/css/style.css
+++ b/nextcloudappstore/core/static/assets/css/style.css
@@ -249,6 +249,7 @@ form .text-danger {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    line-height: 1.2em;
 }
 
 .app-list-container img {
